--- a/Taipei_parking_lot/Tiapei_parking_lot.ipynb
+++ b/Taipei_parking_lot/Tiapei_parking_lot.ipynb
@@ -27023,7 +27023,348 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3BUlccstoyaZ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3BUlccstoyaZ",
+        "outputId": "40c2ae35-22a7-47c2-9e69-b73dc1b9b9e6"
+      },
+      "source": [
+        "df.loc[2]"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "id                                                                   001\n",
+              "area                                                                 信義區\n",
+              "name                                                           府前廣場地下停車場\n",
+              "summary                                為地下二層停車場，計有1998個小型車停車格，1337個機車停車位\n",
+              "address                                                          松壽路1號地下\n",
+              "tel                                                         02-2722-0152\n",
+              "payex                  計時：汽車日間(9-18)30元/時，夜間(18-9)10元/時，全程以半小時計費，月租：汽...\n",
+              "serviceTime                                            00:00:00~23:59:59\n",
+              "totalcar                                                            1998\n",
+              "month_all_day_price                                                 3400\n",
+              "Name: 2, dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "id": "Xc7Fmm-rpndJ",
+        "outputId": "cd621df9-0115-493f-a95f-e5baacb7c1d9"
+      },
+      "source": [
+        "df.tail(10)"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>id</th>\n",
+              "      <th>area</th>\n",
+              "      <th>name</th>\n",
+              "      <th>summary</th>\n",
+              "      <th>address</th>\n",
+              "      <th>tel</th>\n",
+              "      <th>payex</th>\n",
+              "      <th>serviceTime</th>\n",
+              "      <th>totalcar</th>\n",
+              "      <th>month_all_day_price</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>416</th>\n",
+              "      <td>JA76</td>\n",
+              "      <td>信義區</td>\n",
+              "      <td>嘟嘟房世貿站停車場</td>\n",
+              "      <td>建物附設立體式大型車9格，建物附設立體式小型車382格(含身心障礙停車位8格)。</td>\n",
+              "      <td>台北市信義區信義路5段1號B1、B2</td>\n",
+              "      <td>2655-0818</td>\n",
+              "      <td>計時：小型車70元/時；大型車150元/時，停車未滿1小時以1小時計，逾1小時以上者，未滿半...</td>\n",
+              "      <td>24小時</td>\n",
+              "      <td>389</td>\n",
+              "      <td>15000.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>417</th>\n",
+              "      <td>JA92</td>\n",
+              "      <td>信義區</td>\n",
+              "      <td>全聯福利中心松興店地下二樓停車場</td>\n",
+              "      <td>建物附設機械式小型車21格(含身心障礙停車位1格)。</td>\n",
+              "      <td>松隆路36號地下2樓</td>\n",
+              "      <td>2568-3773</td>\n",
+              "      <td>月租：15000元/月。</td>\n",
+              "      <td>24小時</td>\n",
+              "      <td>22</td>\n",
+              "      <td>15000.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>418</th>\n",
+              "      <td>GA08</td>\n",
+              "      <td>大安區</td>\n",
+              "      <td>千里亭有限公司復興南路停車場</td>\n",
+              "      <td>一般平面式小型車49格(含身心障礙停車位1格)</td>\n",
+              "      <td>臺北市大安區大安段二小段425、426、427、427-1地號;復興南路二段119</td>\n",
+              "      <td>0905-111-507</td>\n",
+              "      <td>計時：100元/時，停車未滿1小時以1小時計，逾1小時以上者，未滿半小時以半小時計；計次：6...</td>\n",
+              "      <td>24小時</td>\n",
+              "      <td>50</td>\n",
+              "      <td>15000.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>419</th>\n",
+              "      <td>GG8</td>\n",
+              "      <td>大安區</td>\n",
+              "      <td>便利停車場敦南站</td>\n",
+              "      <td>立體式小型車83格(含身心障礙停車位2格)。立體式機車198格(含身心障</td>\n",
+              "      <td>大安區敦化南路一段111號B1~B4</td>\n",
+              "      <td>2799-1001#168</td>\n",
+              "      <td>計時：80元/時，停車未滿1小時以1小時計，逾1小時以上者，未滿半小時以半小時計費。月租：固...</td>\n",
+              "      <td>24小時</td>\n",
+              "      <td>72</td>\n",
+              "      <td>16000.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>420</th>\n",
+              "      <td>J64</td>\n",
+              "      <td>信義區</td>\n",
+              "      <td>便利停車場忠孝站</td>\n",
+              "      <td>建物附設立體式小型車22格(含身心障礙停車位1格)。</td>\n",
+              "      <td>台北市信義區基隆路1段200號B3</td>\n",
+              "      <td>2799-1001</td>\n",
+              "      <td>臨停：100元/時，停車未滿1小時以1小時計，逾1小時以上者，未滿半小時以半小時計。全天16...</td>\n",
+              "      <td>24小時</td>\n",
+              "      <td>23</td>\n",
+              "      <td>16000.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>421</th>\n",
+              "      <td>2528</td>\n",
+              "      <td>信義區</td>\n",
+              "      <td>基隆路1段停車場</td>\n",
+              "      <td>一般平面式小型車36格(含身心障礙停車位1格)。</td>\n",
+              "      <td></td>\n",
+              "      <td>2568-3383</td>\n",
+              "      <td>臨停：200元/時，停車未滿1小時以1小時計，逾1小時以上未滿半小時，以半小時計費。月租：1...</td>\n",
+              "      <td>24小時</td>\n",
+              "      <td>36</td>\n",
+              "      <td>18000.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>422</th>\n",
+              "      <td>3631</td>\n",
+              "      <td>信義區</td>\n",
+              "      <td>微風南山地下停車場</td>\n",
+              "      <td>建物附設立體式小型車231格(含身心障礙停車位5格，孕婦、育有6歲以下兒童停車位4格)。</td>\n",
+              "      <td></td>\n",
+              "      <td>6638-9999#3601</td>\n",
+              "      <td>100元/時，停車未滿1小時以1小時計，逾1小時以上，未滿半小時以半小時計。月租：20000元。</td>\n",
+              "      <td>24小時</td>\n",
+              "      <td>231</td>\n",
+              "      <td>20000.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>423</th>\n",
+              "      <td>G36</td>\n",
+              "      <td>大安區</td>\n",
+              "      <td>國立臺灣師範大學圖書館校區地下停車場</td>\n",
+              "      <td>建物附設立體式小型車250格(含身心障礙停車位8格)</td>\n",
+              "      <td>臺北市大安區和平東路一段127之2號B1-B3</td>\n",
+              "      <td>7734-3265</td>\n",
+              "      <td>計時：60元/時，全程以半小時計費。本停車場非營業時間(00-06時)不提供臨時停車隔夜停放...</td>\n",
+              "      <td>24小時</td>\n",
+              "      <td>258</td>\n",
+              "      <td>30000.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>424</th>\n",
+              "      <td>J32</td>\n",
+              "      <td>信義區</td>\n",
+              "      <td>台北君悅酒店停車場</td>\n",
+              "      <td>立體式小型車491格(含身心障礙停車位13格，孕婦、育有6歲以下兒童停車位2格)。</td>\n",
+              "      <td>松壽路2號B1、B2</td>\n",
+              "      <td>02-2720-1005</td>\n",
+              "      <td>70元/時，停車未滿1小時以1小時計，逾1小時以上者，未滿半小時以半小時計。長期客戶-月租6...</td>\n",
+              "      <td>24小時</td>\n",
+              "      <td>504</td>\n",
+              "      <td>60480.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>425</th>\n",
+              "      <td>J00003</td>\n",
+              "      <td>信義區</td>\n",
+              "      <td>台北君悅酒店停車場</td>\n",
+              "      <td></td>\n",
+              "      <td>松壽路2號B1、B2</td>\n",
+              "      <td>27201005</td>\n",
+              "      <td>70元/時，停車未滿1小時以1小時計，逾1小時以上者，未滿半小時以半小時計。長期客戶一月租6...</td>\n",
+              "      <td>24小時</td>\n",
+              "      <td>403</td>\n",
+              "      <td>60480.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "         id area                name  ... serviceTime totalcar month_all_day_price\n",
+              "416    JA76  信義區           嘟嘟房世貿站停車場  ...        24小時      389             15000.0\n",
+              "417    JA92  信義區    全聯福利中心松興店地下二樓停車場  ...        24小時       22             15000.0\n",
+              "418    GA08  大安區      千里亭有限公司復興南路停車場  ...        24小時       50             15000.0\n",
+              "419     GG8  大安區            便利停車場敦南站  ...        24小時       72             16000.0\n",
+              "420     J64  信義區            便利停車場忠孝站  ...        24小時       23             16000.0\n",
+              "421    2528  信義區            基隆路1段停車場  ...        24小時       36             18000.0\n",
+              "422    3631  信義區           微風南山地下停車場  ...        24小時      231             20000.0\n",
+              "423     G36  大安區  國立臺灣師範大學圖書館校區地下停車場  ...        24小時      258             30000.0\n",
+              "424     J32  信義區           台北君悅酒店停車場  ...        24小時      504             60480.0\n",
+              "425  J00003  信義區           台北君悅酒店停車場  ...        24小時      403             60480.0\n",
+              "\n",
+              "[10 rows x 10 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 37
+        },
+        "id": "8u3FmEm4qRuV",
+        "outputId": "68aa9bab-e088-4602-ce49-3f2c7f227110"
+      },
+      "source": [
+        "df.loc[425]['payex']"
+      ],
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'70元/時，停車未滿1小時以1小時計，逾1小時以上者，未滿半小時以半小時計。長期客戶一月租6300元，半年租34020元，年租60480元'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 57
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "id": "JpbMftJcqh1u",
+        "outputId": "ae863b67-62f5-4ceb-a174-e2553f7fb2d9"
+      },
+      "source": [
+        "df.loc[423]['payex']"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'計時：60元/時，全程以半小時計費。本停車場非營業時間(00-06時)不提供臨時停車隔夜停放，如停放本停車場酌收管理費360元。月租：本校教職員日間年繳4800元、夜間年繳30000元。'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 37
+        },
+        "id": "8p6kxk4eq2LO",
+        "outputId": "92b572ea-ae2f-449b-e3fc-c43a102c7d6b"
+      },
+      "source": [
+        "df.loc[422]['payex']"
+      ],
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'100元/時，停車未滿1小時以1小時計，逾1小時以上，未滿半小時以半小時計。月租：20000元。'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KhOG6qYErGpk"
       },
       "source": [
         ""
